Updated to Jakarta EE 10
- Added build yaml